--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,9 @@
 #key=value
 browser=chrome
-qa1=http://qa1.vyrtack.com
-color=red;
+qa1=http://qa1.vytrack.com
+qa2=http://qa2.vytrack.com
+qa3=http://qa3.vytrack.com
+color=red
 
 #Credentials
 store_manager=storemanager85
